syntax = "proto3";
package aumega.guard.v1;

option go_package = "github.com/AumegaChain/aumega/x/guard/types";

// Params defines the parameters for the module.
message Params {
  string admin_account = 1;
  string account_privileges_token_collection_creator = 2;
  string account_privileges_token_collection_id = 3;
  bytes default_privileges = 4;
  string base_denom = 5;
}
